--- a/public/index.html
+++ b/public/index.html
@@ -14,11 +14,11 @@
     	<div class="jumbotron-fluid banner" >  
     		<h1>Crime HotSpot by ODU Spring 2019 CS411W( Kennedy ) Team Silver</h1>     	 
     	</div>
-    	<div class = "container">
+    	<div class = "container-fluid">
       		<label>Name:</label>
       		<input type="text" ng-model="yourName" placeholder="Enter a name here">
       		<hr>
-      		<h1>Hello Team Silver you are {{yourName}}! Let's start programming.</h1>
+      		<h5>Hello Team Silver you are {{yourName}}! Let's start programming.</h5>
    		</div>   		
     </div>
     <div id="map"></div>
