--- a/public/index.html
+++ b/public/index.html
@@ -23,12 +23,34 @@
 <!--<h5>Hello Team Silver you are {{yourName}}! Let's start programming.</h5>-->
 <!--</div>   		-->
 <!--</div>-->
+
+
+
+
 <div id="map"></div>
 
 <!--<div class= "banner" title="footer">-->
 <!--<a href = "https://www.cs.odu.edu/~411silver"> About </a>-->
 <!--</div>-->
 </body>
+
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">Crime HotSpot</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+            <li class="nav-item active">
+                <a class="nav-link" href="#">Map<span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">About Us</a>
+            </li>
+        </ul>
+    </div>
+</nav>
+
 
 
 <!-- Angular -->
