Navbar fades in only when mouse is hovering over it

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
             src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD6-F96eJ-bI82UmRtHtsfZFHxjodcCjR0&libraries=visualization&callback=initMap">
     </script>
 </head>
-<body>
+<body ng-app="CrimeHotSpot">
 <!--<div>-->
 <!--<div class="jumbotron-fluid banner" >  -->
 <!--<h1>Crime HotSpot by ODU Spring 2019 CS411W( Kennedy ) Team Silver</h1>     	 -->
