--- a/public/index.html
+++ b/public/index.html
@@ -22,11 +22,10 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="navbar-center">
+        <img id="nav-logo" src="../app/Content/Images/crimehotspot_logo.png"/>
         <a class="navbar-brand" href="#">
-            <img id="nav-logo" src="../app/Content/Images/crimehotspot_logo.png"/>
             Crime HotSpot
         </a>
-
         <ul class="navbar-nav">
             <li class="nav-item">
                 <a class="nav-link" href="#">Map</a>
@@ -35,7 +34,11 @@
                 <a class="nav-link" href="#">About Us</a>
             </li>
         </ul>
+
+
+        <img class="" id="color-scale" src="../app/Content/Images/colorscale.png" height="200" width="640"/>
     </div>
+
 </nav>
 
 
