--- a/public/index.html
+++ b/public/index.html
@@ -21,26 +21,39 @@
 <div id="map"></div>
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
     <div class="navbar-center">
-        <img id="nav-logo" src="../app/Content/Images/crimehotspot_logo.png"/>
-        <a class="navbar-brand" href="#">
-            Crime HotSpot
-        </a>
-        <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link" href="#">Map</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">About Us</a>
-            </li>
-        </ul>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <img id="nav-logo" src="../app/Content/Images/crimehotspot_logo.png"/>
+            <a class="navbar-brand" href="#">
+                Crime HotSpot
+            </a>
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Map</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">About Us</a>
+                </li>
+            </ul>
 
-
-        <img class="" id="color-scale" src="../app/Content/Images/colorscale.png" height="200" width="640"/>
+            <img class="" id="color-scale" src="../app/Content/Images/colorscale.png" height="200" width="640"/>
+            <form class="form-inline my-2 my-lg-0">
+                <!--<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">-->
+                <input class="form-control mr-sm-2">
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            </form>
+        </div>
     </div>
 
 </nav>
 
+
+<div class="sidenav">
+</div>
 
 </body>
 
@@ -61,6 +74,9 @@
 
 <!-- Latest compiled JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"></script>
+
+<!--Custom animations for CrimeHotSpot-->
+<script src=./../app/JavaScripts/indexAnimation.js type="text/javascript"></script>
 
 <!-- ABOVE FOR USE WITH MAINSTYLE IMPORTES MAXCDN -->
 
