Sidebar animation progress

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <script src=./../app/JavaScripts/indexMap.js type="text/javascript"></script>
     <!--AIzaSyD6-F96eJ-bI82UmRtHtsfZFHxjodcCjR0&libraries-->
     <script async defer
-            src="https://maps.googleapis.com/maps/api/js?key=KEY=visualization&callback=initMap">
+            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD6-F96eJ-bI82UmRtHtsfZFHxjodcCjR0&libraries=visualization&callback=initMap">
     </script>
 </head>
 
@@ -43,8 +43,8 @@
             <img class="" id="color-scale" src="../app/Content/Images/colorscale.png" height="200" width="640"/>
             <form class="form-inline my-2 my-lg-0">
                 <!--<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">-->
-                <input class="form-control mr-sm-2">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                <input class="form-control mr-sm-2" placeholder="Enter Location">
+                <button class="btn btn-outline-success my-2 my-sm-0" style="padding:6px"  type="submit">Enter</button>
             </form>
         </div>
     </div>
@@ -52,8 +52,25 @@
 </nav>
 
 
-<div class="sidenav">
+<div class="sidenav-arrow">
+    <h1> > </h1>
 </div>
+<div class="sidenav">
+    <h2>Option here</h2>
+    <br>
+    <br>
+    <br>
+    <h2>Option here</h2>
+    <br>
+    <br>
+    <br>
+    <h2>Option here</h2>
+    <br>
+    <br>
+    <br>
+    <h2>Option here</h2>
+</div>
+
 
 </body>
 
