Bower is now used to install Angular dependencies.

--- a/public/index.html
+++ b/public/index.html
@@ -46,6 +46,7 @@
                 <img class="" id="color-scale" src="../app/Content/Images/colorscale.png" height="200" width="640"/>
             </div>
 
+            <input id="username" class="form-inline" type="text" placeholder="Enter username" ng-model="formData.username">
             <!--
             SEARCH PREDICTION LOCATION FEATURE, Still needed to get js portion working
             <form class="form-inline my-2 my-lg-0">
@@ -83,9 +84,13 @@
 
 
 <!-- Angular -->
-<script src="./../app/JavaScripts/ThirdParty/Angular/angular.min.js"></script>
-<script src="./../app/JavaScripts/ThirdParty/Angular/angular.js"></script>
-<script src="./../app/JavaScripts/ThirdParty/Angular/angular-mocks.js"></script>
+<script src="../bower_components/jquery/jquery.js"></script>
+<script src="../bower_components/angular/angular.js"></script>
+<script src="../bower_components/angular-route/angular-route.js"></script>
+<script src="../bower_components/angularjs-geolocation/dist/angularjs-geolocation.min.js"></script>
+<!--<script src="./../app/JavaScripts/ThirdParty/Angular/angular.min.js"></script>-->
+<!--<script src="./../app/JavaScrip ts/ThirdParty/Angular/angular.js"></script>-->
+<!--<script src="./../app/JavaScripts/ThirdParty/Angular/angular-mocks.js"></script>-->
 
 
 <!-- BELOW FOR USE WITH MAINSTYLE IMPORTES MAXCDN -->
