--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,33 @@
     <script async defer
             src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD6-F96eJ-bI82UmRtHtsfZFHxjodcCjR0&libraries=visualization&callback=initMap">
     </script>
+
+
+    <!-- Angular -->
+    <script src="../bower_components/jquery/dist/jquery.js"></script>
+    <script src="../bower_components/angular/angular.js"></script>
+    <script src="../bower_components/angular-route/angular-route.js"></script>
+    <script src="../bower_components/angularjs-geolocation/dist/angularjs-geolocation.min.js"></script>
+    <!--<script src="./../app/JavaScripts/ThirdParty/Angular/angular.min.js"></script>-->
+    <!--<script src="./../app/JavaScrip ts/ThirdParty/Angular/angular.js"></script>-->
+    <!--<script src="./../app/JavaScripts/ThirdParty/Angular/angular-mocks.js"></script>-->
+
+    <!-- BELOW FOR USE WITH MAINSTYLE IMPORTES MAXCDN -->
+
+    <!-- jQuery library -->
+    <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>-->
+
+    <!-- Popper JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"></script>
+
+    <!-- Latest compiled JavaScript -->
+    <script src="../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+    <!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"></script>-->
+
+    <!--Custom animations for CrimeHotSpot-->
+    <script src=./../app/JavaScripts/indexAnimation.js type="text/javascript"></script>
+
+    <!-- ABOVE FOR USE WITH MAINSTYLE IMPORTES MAXCDN -->
 </head>
 
 
@@ -46,7 +73,8 @@
                 <img class="" id="color-scale" src="../app/Content/Images/colorscale.png" height="200" width="640"/>
             </div>
 
-            <input id="username" class="form-inline" type="text" placeholder="Enter username" ng-model="formData.username">
+            <input id="username" class="form-inline" type="text" placeholder="Enter username" ng-model="username">
+            <h1>test {{1+2}}</h1>
             <!--
             SEARCH PREDICTION LOCATION FEATURE, Still needed to get js portion working
             <form class="form-inline my-2 my-lg-0">
@@ -82,31 +110,5 @@
 
 </body>
 
-
-<!-- Angular -->
-<script src="../bower_components/jquery/jquery.js"></script>
-<script src="../bower_components/angular/angular.js"></script>
-<script src="../bower_components/angular-route/angular-route.js"></script>
-<script src="../bower_components/angularjs-geolocation/dist/angularjs-geolocation.min.js"></script>
-<!--<script src="./../app/JavaScripts/ThirdParty/Angular/angular.min.js"></script>-->
-<!--<script src="./../app/JavaScrip ts/ThirdParty/Angular/angular.js"></script>-->
-<!--<script src="./../app/JavaScripts/ThirdParty/Angular/angular-mocks.js"></script>-->
-
-
-<!-- BELOW FOR USE WITH MAINSTYLE IMPORTES MAXCDN -->
-
-<!-- jQuery library -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-
-<!-- Popper JS -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"></script>
-
-<!-- Latest compiled JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"></script>
-
-<!--Custom animations for CrimeHotSpot-->
-<script src=./../app/JavaScripts/indexAnimation.js type="text/javascript"></script>
-
-<!-- ABOVE FOR USE WITH MAINSTYLE IMPORTES MAXCDN -->
 
 </html>
