Bootstrap 4.2.1+ Should be used for better animations when collapsed bar is interacted with.

--- a/public/index.html
+++ b/public/index.html
@@ -14,13 +14,10 @@
     <script src="../bower_components/angular/angular.js"></script>
     <script src="../bower_components/angular-route/angular-route.js"></script>
     <script src="../bower_components/angularjs-geolocation/dist/angularjs-geolocation.min.js"></script>
-    <!--<script src="./../app/JavaScripts/ThirdParty/Angular/angular.min.js"></script>-->
-    <!--<script src="./../app/JavaScrip ts/ThirdParty/Angular/angular.js"></script>-->
-    <!--<script src="./../app/JavaScripts/ThirdParty/Angular/angular-mocks.js"></script>-->
 
     <!-- Angular Controller (This script must be placed after angular to avoid issues)-->
     <script src=./../app/JavaScripts/indexMap.js type="text/javascript"></script>
-    <!--AIzaSyD6-F96eJ-bI82UmRtHtsfZFHxjodcCjR0&libraries=visualization&callback=initMap-->
+    <!---->
     <script async defer
             src="https://maps.googleapis.com/maps/api/js?key=KEY">
     </script>
@@ -34,8 +31,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"></script>
 
     <!-- Latest compiled JavaScript -->
-    <script src="../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-    <!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"></script>-->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"></script>
 
     <!--Custom animations for CrimeHotSpot-->
     <script src=./../app/JavaScripts/indexAnimation.js type="text/javascript"></script>
