Color gradient image removed, replaced with proper css gradient which can be modified at anytime.

--- a/public/index.html
+++ b/public/index.html
@@ -67,7 +67,7 @@
             <div class="color-scale-holder">
                 <h6 class="float-left">Dangerous</h6>
                 <h6 class="float-right">Safer</h6>
-                <img class="" id="color-scale" src="../app/Content/Images/colorscale.png" height="200" width="640"/>
+                <div id="color-gradient"></div>
             </div>
 
             <!--
