--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,6 @@
     <link href="../app/StyleSheets/index.css" rel="stylesheet" type="text/css">
 
 
-
     <!-- Angular -->
     <script src="../bower_components/jquery/dist/jquery.js"></script>
     <script src="../bower_components/angular/angular.js"></script>
@@ -51,10 +50,13 @@
     </button>
     <div class="navbar-center">
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <img id="nav-logo" src="../app/Content/Images/crimehotspot_logo.png"/>
-            <a class="navbar-brand" href="#">
-                Crime HotSpot
-            </a>
+            <div>
+                <a class="navbar-brand" href="#">
+                    Crime HotSpot
+                </a>
+                <img id="nav-logo" src="../app/Content/Images/crimehotspot_logo.png"/>
+            </div>
+
             <ul class="navbar-nav">
                 <li class="nav-item">
                     <a class="nav-link" href="#">Map</a>
@@ -63,10 +65,11 @@
                     <a class="nav-link" href="#">About Us</a>
                 </li>
             </ul>
-
             <div class="color-scale-holder">
-                <h6 class="float-left">Dangerous</h6>
-                <h6 class="float-right">Safer</h6>
+                <div class="d-inline-block title">
+                    <h6 class="float-left">Dangerous</h6>
+                    <h6 class="float-right">Safer</h6>
+                </div>
                 <div id="color-gradient"></div>
             </div>
 
