Properly animated sidenav. Needs styling.

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
     <script src=./../app/JavaScripts/indexMap.js type="text/javascript"></script>
     <!---->
     <script async defer
-            src="https://maps.googleapis.com/maps/api/js?key=KEY">
+            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD6-F96eJ-bI82UmRtHtsfZFHxjodcCjR0&libraries=visualization&callback=initMap">
     </script>
 
     <!-- BELOW FOR USE WITH MAINSTYLE IMPORTES MAXCDN -->
@@ -88,12 +88,11 @@
 
 <div id="mySidenav" class="sidenav">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-    <a href="#">About</a>
-    <a href="#">Services</a>
-    <a href="#">Clients</a>
-    <a href="#">Contact</a>
+    <a href="#">Armed Robbery <img src="../app/Content/Images/knife-icon.png" height="120px" width="120px"/></a>
+    <a href="#">Car Theft <img src="../app/Content/Images/car-theft.png" height="120px" width="120px"/></a>
+    <a href="#">House Breakins<img src="../app/Content/Images/house-theft.png" height="120px" width="120px"/></a>
 </div>
-<a href="javascript:void(0)" class="closebtn" onclick="openNav()">&#9776; open</a>
+<a id="sidenavbtn" class="openbtn" onclick="openNav()">&#9776; open</a>
 
 
 <!--<span id="openButton" onclick="openNav()">&#9776; open</span>-->
