--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html ng-app="CrimeHotSpot">
+<html ng-app>
 <head>
 
     <title>Crime HotSpot</title>
@@ -7,44 +7,16 @@
     <!-- style sheet -->
     <link href="../app/StyleSheets/index.css" rel="stylesheet" type="text/css">
 
-
-
-    <!-- Angular -->
-    <script src="../bower_components/jquery/dist/jquery.js"></script>
-    <script src="../bower_components/angular/angular.js"></script>
-    <script src="../bower_components/angular-route/angular-route.js"></script>
-    <script src="../bower_components/angularjs-geolocation/dist/angularjs-geolocation.min.js"></script>
-    <!--<script src="./../app/JavaScripts/ThirdParty/Angular/angular.min.js"></script>-->
-    <!--<script src="./../app/JavaScrip ts/ThirdParty/Angular/angular.js"></script>-->
-    <!--<script src="./../app/JavaScripts/ThirdParty/Angular/angular-mocks.js"></script>-->
-
-    <!-- Angular Controller (This script must be placed after angular to avoid issues)-->
+    <!-- Google Maps API -->
     <script src=./../app/JavaScripts/indexMap.js type="text/javascript"></script>
-    <!--AIzaSyD6-F96eJ-bI82UmRtHtsfZFHxjodcCjR0&libraries=visualization&callback=initMap-->
+    <!--AIzaSyD6-F96eJ-bI82UmRtHtsfZFHxjodcCjR0&libraries-->
     <script async defer
-            src="https://maps.googleapis.com/maps/api/js?key=KEY">
+            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD6-F96eJ-bI82UmRtHtsfZFHxjodcCjR0&libraries=visualization&callback=initMap">
     </script>
-
-    <!-- BELOW FOR USE WITH MAINSTYLE IMPORTES MAXCDN -->
-
-    <!-- jQuery library -->
-    <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>-->
-
-    <!-- Popper JS -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"></script>
-
-    <!-- Latest compiled JavaScript -->
-    <script src="../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-    <!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"></script>-->
-
-    <!--Custom animations for CrimeHotSpot-->
-    <script src=./../app/JavaScripts/indexAnimation.js type="text/javascript"></script>
-
-    <!-- ABOVE FOR USE WITH MAINSTYLE IMPORTES MAXCDN -->
 </head>
 
 
-<body ng-controller="MapController">
+<body ng-app="CrimeHotSpot">
 
 <div id="map"></div>
 
@@ -68,19 +40,12 @@
                 </li>
             </ul>
 
-            <div class="color-scale-holder">
-                <h6 class="float-left">Dangerous</h6>
-                <h6 class="float-right">Safer</h6>
-                <img class="" id="color-scale" src="../app/Content/Images/colorscale.png" height="200" width="640"/>
-            </div>
-
-            <!--
-            SEARCH PREDICTION LOCATION FEATURE, Still needed to get js portion working
+            <img class="" id="color-scale" src="../app/Content/Images/colorscale.png" height="200" width="640"/>
             <form class="form-inline my-2 my-lg-0">
-                <input id="searchTextField" class="form-control mr-sm-2" type="text" placeholder="Enter Location">
-                <button class="btn btn-outline-success my-2 my-sm-0" style="padding:6px" type="submit">Enter</button>
+                <!--<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">-->
+                <input class="form-control mr-sm-2" placeholder="Enter Location">
+                <button class="btn btn-outline-success my-2 my-sm-0" style="padding:6px"  type="submit">Enter</button>
             </form>
-            -->
         </div>
     </div>
 
@@ -109,5 +74,27 @@
 
 </body>
 
+
+<!-- Angular -->
+<script src="./../app/JavaScripts/ThirdParty/Angular/angular.min.js"></script>
+<script src="./../app/JavaScripts/ThirdParty/Angular/angular.js"></script>
+<script src="./../app/JavaScripts/ThirdParty/Angular/angular-mocks.js"></script>
+
+
+<!-- BELOW FOR USE WITH MAINSTYLE IMPORTES MAXCDN -->
+
+<!-- jQuery library -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+<!-- Popper JS -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"></script>
+
+<!-- Latest compiled JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"></script>
+
+<!--Custom animations for CrimeHotSpot-->
+<script src=./../app/JavaScripts/indexAnimation.js type="text/javascript"></script>
+
+<!-- ABOVE FOR USE WITH MAINSTYLE IMPORTES MAXCDN -->
 
 </html>
