Moved files to enforce file structure

--- a/public/index.html
+++ b/public/index.html
@@ -15,9 +15,9 @@
       <script src="./../app/JavaScripts/ThirdParty/Angular/angular.min.js"></script>
       <script src="./../app/JavaScripts/ThirdParty/Angular/angular.js"></script>
       <script src="./../app/JavaScripts/ThirdParty/Angular/angular-mocks.js"></script>
-      <script src="js/app.js"></script>
-      <script src="js/gservice.js"></script>
-      <script src="js/mapLoad.js"></script>
+      <script src="../app/app.js"></script>
+      <script src="../app/Controllers/gservice.js"></script>
+      <script src="../app/Modules/mapLoad.js"></script>
 
   </head>
   <body ng-controller="mapLoad">
