--- a/public/index.html
+++ b/public/index.html
@@ -11,22 +11,21 @@
 
 
     <!-- Angular -->
-    <script src="../bower_components/jquery/dist/jquery.js"></script>
     <script src="../bower_components/angular/angular.js"></script>
     <script src="../bower_components/angular-route/angular-route.js"></script>
     <script src="../bower_components/angularjs-geolocation/dist/angularjs-geolocation.min.js"></script>
 
     <!-- Angular Controller (This script must be placed after angular to avoid issues)-->
     <script src=./../app/JavaScripts/indexMap.js type="text/javascript"></script>
-    <!---->
+    <!--https://maps.googleapis.com/maps/api/js?key=AIzaSyD6-F96eJ-bI82UmRtHtsfZFHxjodcCjR0&libraries=visualization&callback=initMap-->
     <script async defer
-            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD6-F96eJ-bI82UmRtHtsfZFHxjodcCjR0&libraries=visualization&callback=initMap">
+            src="">
     </script>
 
     <!-- BELOW FOR USE WITH MAINSTYLE IMPORTES MAXCDN -->
 
     <!-- jQuery library -->
-    <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
     <!-- Popper JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"></script>
@@ -45,44 +44,36 @@
 
 <div id="map"></div>
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
+<nav class="navbar fixed-top">
     <div class="navbar-center">
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <div>
-                <a class="navbar-brand" href="#">
-                    Crime HotSpot
+        <a class="text-center" href="#">
+            Crime HotSpot
+        </a>
+        <img id="nav-logo" class="img-fluid" src="../app/Content/Images/crimehotspot_logo.png" width="320"
+             height="154"/>
+
+        <ul class="navbar-nav">
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                   aria-haspopup="true" aria-expanded="false">
+                    Menu
                 </a>
-                <img id="nav-logo" src="../app/Content/Images/crimehotspot_logo.png"/>
-            </div>
-
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Map</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">About Us</a>
-                </li>
-            </ul>
-            <div class="color-scale-holder">
-                <div class="d-inline-block title">
-                    <h6 class="float-left">Dangerous</h6>
-                    <h6 class="float-right">Safer</h6>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="#">Action</a>
+                    <a class="dropdown-item" href="#">Another action</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="#">Something else here</a>
                 </div>
-                <div id="color-gradient"></div>
-            </div>
+            </li>
+        </ul>
 
-            <!--
-            SEARCH PREDICTION LOCATION FEATURE, Still needed to get js portion working
-            <form class="form-inline my-2 my-lg-0">
-                <input id="searchTextField" class="form-control mr-sm-2" type="text" placeholder="Enter Location">
-                <button class="btn btn-outline-success my-2 my-sm-0" style="padding:6px" type="submit">Enter</button>
-            </form>
-            -->
-        </div>
+        <!--
+        SEARCH PREDICTION LOCATION FEATURE, Still needed to get js portion working
+        <form class="form-inline my-2 my-lg-0">
+            <input id="searchTextField" class="form-control mr-sm-2" type="text" placeholder="Enter Location">
+            <button class="btn btn-outline-success my-2 my-sm-0" style="padding:6px" type="submit">Enter</button>
+        </form>
+        -->
     </div>
 </nav>
 
@@ -97,6 +88,13 @@
 
 <!--<span id="openButton" onclick="openNav()">&#9776; open</span>-->
 
+<div class="color-scale-holder fixed-bottom w-25 mx-auto">
+    <div class="d-inline-block title">
+        <h6 class="float-left">Dangerous</h6>
+        <h6 class="float-right">Safer</h6>
+    </div>
+    <div id="color-gradient"></div>
+</div>
 
 </body>
 
