Added filterData module to index.html

--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
       <script src="js/app.js"></script>
       <script src="js/gservice.js"></script>
       <script src="js/mapLoad.js"></script>
+      <script src="js/filterData.js"></script>
 
   </head>
   <body ng-controller="mapLoad">
