Centered top navigation bar.

--- a/public/index.html
+++ b/public/index.html
@@ -40,19 +40,21 @@
 
   </head>
   <body ng-controller="mapLoad">
-  <div id="map"></div>
+  <!--<div id="map"></div>-->
 
-  <nav class="navbar fixed-top">
+  <nav class="fixed-top">
       <div class="navbar-center">
+          <div class="w-100 text-center">
           <a class="text-center" href="#">
               Crime HotSpot
           </a>
-          <img id="nav-logo" class="img-fluid" src="../app/Content/Images/crimehotspot_logo.png" width="320"
+          </div>
+          <img alt="CrimeHotSpot Logo" id="nav-logo" class="img-fluid" src="../app/Content/Images/crimehotspot_logo.png" width="320"
                height="154"/>
 
           <ul class="navbar-nav">
               <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                  <a class="nav-link dropdown-toggle text-center" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
                      aria-haspopup="true" aria-expanded="false">
                       Menu
                   </a>
