--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,17 @@
       <script src="js/mapLoad.js"></script>
 
       <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/1.0.22/angular-ui-router.js"></script>
-
+      <style>
+          h3 img {
+              max-height: 50px;
+          }
+          #map {
+              height: 400px;
+              margin: 20px 0;
+              border-radius: 5px;
+              border: 1px solid silver;
+          }
+      </style>
   </head>
   <body >
 
