--- a/public/index.html
+++ b/public/index.html
@@ -1,100 +1,102 @@
 <!doctype html>
-<html ng-app = 'crimeHotSpot'>
-  <head>
+<html ng-app='crimeHotSpot'>
+<head>
 
-      <!-- BELOW FOR USE WITH MAINSTYLE IMPORTES MAXCDN -->
+    <!-- BELOW FOR USE WITH MAINSTYLE IMPORTES MAXCDN -->
 
-      <!-- jQuery library -->
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
-      <!-- Popper JS -->
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"></script>
+    <!-- Popper JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"></script>
 
-      <!-- Latest compiled JavaScript -->
-      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"></script>
+    <!-- Latest compiled JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"></script>
 
-      <!-- ABOVE FOR USE WITH MAINSTYLE IMPORTES MAXCDN -->
-      
-      <!-- style sheet -->
-      <link href="../app/StyleSheets/index.css" rel="stylesheet" type="text/css" >
-      <link href="../app/StyleSheets/mainstyle.css" rel="stylesheet" type="text/css">
-      <link href="../app/StyleSheets/sidenav.css" rel="stylesheet" type="text/css">
+    <!-- ABOVE FOR USE WITH MAINSTYLE IMPORTES MAXCDN -->
 
-
-      <!-- Google Maps API -->
-      <script async defer
-              src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD6-F96eJ-bI82UmRtHtsfZFHxjodcCjR0&libraries=visualization">
-      </script>
-
-      <!-- Angular -->
-      <script src="./../app/JavaScripts/ThirdParty/Angular/angular.min.js"></script>
-      <script src="./../app/JavaScripts/ThirdParty/Angular/angular.js"></script>
-      <script src="./../app/JavaScripts/ThirdParty/Angular/angular-mocks.js"></script>
-      <script src="../app/app.js"></script>
-      <script src="../app/Controllers/gservice.js"></script>
-      <script src="../app/Controllers/mapLoad.js"></script>
-
-      <!--Custom animations for CrimeHotSpot-->
-      <script src=./../app/JavaScripts/indexAnimation.js type="text/javascript"></script>
+    <!-- style sheet -->
+    <link href="../app/StyleSheets/index.css" rel="stylesheet" type="text/css">
+    <link href="../app/StyleSheets/mainstyle.css" rel="stylesheet" type="text/css">
+    <link href="../app/StyleSheets/sidenav.css" rel="stylesheet" type="text/css">
 
 
-  </head>
-  <body ng-controller="mapLoad">
-  <!--<div id="map"></div>-->
+    <!-- Google Maps API -->
+    <script async defer
+            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD6-F96eJ-bI82UmRtHtsfZFHxjodcCjR0&libraries=visualization">
+    </script>
 
-  <nav class="fixed-top">
-      <div class="navbar-center">
-          <div class="w-100 text-center">
-          <a class="text-center" href="#">
-              Crime HotSpot
-          </a>
-          </div>
-          <img alt="CrimeHotSpot Logo" id="nav-logo" class="img-fluid" src="../app/Content/Images/crimehotspot_logo.png" width="320"
-               height="154"/>
+    <!-- Angular -->
+    <script src="./../app/JavaScripts/ThirdParty/Angular/angular.min.js"></script>
+    <script src="./../app/JavaScripts/ThirdParty/Angular/angular.js"></script>
+    <script src="./../app/JavaScripts/ThirdParty/Angular/angular-mocks.js"></script>
+    <script src="../app/app.js"></script>
+    <script src="../app/Controllers/gservice.js"></script>
+    <script src="../app/Controllers/mapLoad.js"></script>
 
-          <ul class="navbar-nav">
-              <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle text-center" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                     aria-haspopup="true" aria-expanded="false">
-                      Menu
-                  </a>
-                  <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <a class="dropdown-item" href="#">Action</a>
-                      <a class="dropdown-item" href="#">Another action</a>
-                      <div class="dropdown-divider"></div>
-                      <a class="dropdown-item" href="#">Something else here</a>
-                  </div>
-              </li>
-          </ul>
-
-          <!--
-          SEARCH PREDICTION LOCATION FEATURE, Still needed to get js portion working
-          <form class="form-inline my-2 my-lg-0">
-              <input id="searchTextField" class="form-control mr-sm-2" type="text" placeholder="Enter Location">
-              <button class="btn btn-outline-success my-2 my-sm-0" style="padding:6px" type="submit">Enter</button>
-          </form>
-          -->
-      </div>
-  </nav>
-
-  <div id="mySidenav" class="sidenav">
-      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-      <a href="#">Armed Robbery <img src="../app/Content/Images/knife-icon.png" height="120px" width="120px"/></a>
-      <a href="#">Car Theft <img src="../app/Content/Images/car-theft.png" height="120px" width="120px"/></a>
-      <a href="#">House Breakins<img src="../app/Content/Images/house-theft.png" height="120px" width="120px"/></a>
-  </div>
-  <a id="sidenavbtn" class="openbtn" onclick="openNav()">&#9776; open</a>
+    <!--Custom animations for CrimeHotSpot-->
+    <script src=./../app/JavaScripts/indexAnimation.js type="text/javascript"></script>
 
 
-  <!--<span id="openButton" onclick="openNav()">&#9776; open</span>-->
+</head>
+<body ng-controller="mapLoad">
+<!--<div id="map"></div>-->
 
-  <div class="color-scale-holder fixed-bottom w-25 mx-auto">
-      <div class="d-inline-block title">
-          <h6 class="float-left">Dangerous</h6>
-          <h6 class="float-right">Safer</h6>
-      </div>
-      <div id="color-gradient"></div>
-  </div>
+<nav class="fixed-top">
+    <div class="navbar-center">
+        <div class="w-100">
+            <a class="navbar-brand w-100 text-center">Crime HotSpot</a>
+            <img alt="CrimeHotSpot Logo" id="nav-logo" class="img-fluid "
+                 src="../app/Content/Images/crimehotspot_logo.png"/>
+        </div>
 
-  </body>
+
+        <ul class="navbar-nav">
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle text-center" href="#" id="navbarDropdown" role="button"
+                   data-toggle="dropdown"
+                   aria-haspopup="true" aria-expanded="false">
+                    Menu
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="#">Map</a>
+                    <a class="dropdown-item" href="#">Analytics</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="#">About Us</a>
+                </div>
+            </li>
+        </ul>
+
+        <!--
+        SEARCH PREDICTION LOCATION FEATURE, Still needed to get js portion working
+        <form class="form-inline my-2 my-lg-0">
+            <input id="searchTextField" class="form-control mr-sm-2" type="text" placeholder="Enter Location">
+            <button class="btn btn-outline-success my-2 my-sm-0" style="padding:6px" type="submit">Enter</button>
+        </form>
+        -->
+    </div>
+</nav>
+
+<div id="mySidenav" class="sidenav">
+    <!--<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>-->
+    <a href="#">Armed Robbery <img src="../app/Content/Images/knife-icon.png"/></a>
+    <a href="#">Car Theft <img src="../app/Content/Images/car-theft.png"/></a>
+    <a href="#">House Breakins<img src="../app/Content/Images/house-theft.png"/></a>
+</div>
+<!--<a id="sidenavbtn" class="openbtn" onclick="openNav()">&#9776; open</a>-->
+
+
+<!--<span id="openButton" onclick="openNav()">&#9776; open</span>-->
+
+<div class="container">
+    <div class="color-scale-holder fixed-bottom mx-auto border border-secondary rounded  col-xs-1 col-sm-6 col-md-5 col-lg-4 col-centered">
+        <div class="d-inline-block title">
+            <h6 class="float-left">Dangerous</h6>
+            <h6 class="float-right">Safer</h6>
+        </div>
+        <div id="color-gradient"></div>
+    </div>
+</div>
+
+</body>
 </html>
