Added margin at the bottom of the color legend and modified border to be better looking.

--- a/public/index.html
+++ b/public/index.html
@@ -89,7 +89,7 @@
 <!--<span id="openButton" onclick="openNav()">&#9776; open</span>-->
 
 <div class="container">
-    <div class="color-scale-holder fixed-bottom mx-auto border border-secondary rounded  col-xs-1 col-sm-6 col-md-5 col-lg-4 col-centered">
+    <div class="color-scale-holder fixed-bottom mx-auto border-top border-bottom rounded mb-2 col-xs-1 col-sm-6 col-md-5 col-lg-4 col-centered">
         <div class="d-inline-block title">
             <h6 class="float-left">Dangerous</h6>
             <h6 class="float-right">Safer</h6>
