--- a/public/index.html
+++ b/public/index.html
@@ -40,57 +40,70 @@
 
 </head>
 <body ng-controller="mapLoad">
-<!--<div id="map"></div>-->
+<div id="map"></div>
 
-<nav class="fixed-top">
-    <div class="navbar-center">
-        <div class="w-100">
-            <a class="navbar-brand w-100 text-center">Crime HotSpot</a>
-            <img alt="CrimeHotSpot Logo" id="nav-logo" class="img-fluid "
-                 src="../app/Content/Images/crimehotspot_logo.png"/>
+<!--Navigation bar-->
+<div class="container-fluid">
+    <div class="bg-light dropdown col-sm-2 col-md-2 col-lg-1 border-bottom border-left border-right rounded p-1 m-0">
+        <div class="col-sm-12 col-md-12 col-lg-12">
+            <h5 class="text-center">Crime HotSpot</h5>
         </div>
-
-
-        <ul class="navbar-nav">
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle text-center" href="#" id="navbarDropdown" role="button"
-                   data-toggle="dropdown"
-                   aria-haspopup="true" aria-expanded="false">
-                    Menu
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">Map</a>
-                    <a class="dropdown-item" href="#">Analytics</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">About Us</a>
-                </div>
-            </li>
+        <button class="btn btn-default dropdown-toggle col-sm-12 col-md-12 col-lg-12" type="button" id="menu1" data-toggle="dropdown">
+            <img class="img-fluid" alt="CrimeHotSpot Logo" src="../app/Content/Images/crimehotspot_logo.png">
+            <span class="caret"></span>
+        </button>
+        <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
+            <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Map</a></li>
+            <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Analytics</a></li>
+            <li role="presentation"><a role="menuitem" tabindex="-1" href="#">About Us</a></li>
         </ul>
-
-        <!--
-        SEARCH PREDICTION LOCATION FEATURE, Still needed to get js portion working
-        <form class="form-inline my-2 my-lg-0">
-            <input id="searchTextField" class="form-control mr-sm-2" type="text" placeholder="Enter Location">
-            <button class="btn btn-outline-success my-2 my-sm-0" style="padding:6px" type="submit">Enter</button>
-        </form>
-        -->
     </div>
-</nav>
-
-<div id="mySidenav" class="sidenav">
-    <!--<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>-->
-    <a href="#">Armed Robbery <img src="../app/Content/Images/knife-icon.png"/></a>
-    <a href="#">Car Theft <img src="../app/Content/Images/car-theft.png"/></a>
-    <a href="#">House Breakins<img src="../app/Content/Images/house-theft.png"/></a>
 </div>
+
+
+<!--<div class="container">-->
+<!--<nav class="fixed-top">-->
+<!--<div class="navbar-center">-->
+<!--<div class="w-100">-->
+<!--<a class="navbar-brand w-100 text-center">Crime HotSpot</a>-->
+<!--<img alt="CrimeHotSpot Logo" id="nav-logo" class="img-fluid "-->
+<!--src="../app/Content/Images/crimehotspot_logo.png"/>-->
+<!--</div>-->
+
+
+<!--<ul class="navbar-nav">-->
+<!--<li class="nav-item dropdown">-->
+<!--<a class="nav-link dropdown-toggle text-center" href="#" id="navbarDropdown" role="button"-->
+<!--data-toggle="dropdown"-->
+<!--aria-haspopup="true" aria-expanded="false">-->
+<!--Menu-->
+<!--</a>-->
+<!--<div class="dropdown-menu" aria-labelledby="navbarDropdown">-->
+<!--<a class="dropdown-item" href="#">Map</a>-->
+<!--<a class="dropdown-item" href="#">Analytics</a>-->
+<!--<div class="dropdown-divider"></div>-->
+<!--<a class="dropdown-item" href="#">About Us</a>-->
+<!--</div>-->
+<!--</li>-->
+<!--</ul>-->
+<!--</div>-->
+<!--</nav>-->
+<!--</div>-->
+
+<!--<div id="mySidenav" class="sidenav">-->
+    <!--&lt;!&ndash;<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>&ndash;&gt;-->
+    <!--<a href="#">Armed Robbery <img src="../app/Content/Images/knife-icon.png"/></a>-->
+    <!--<a href="#">Car Theft <img src="../app/Content/Images/car-theft.png"/></a>-->
+    <!--<a href="#">House Breakins<img src="../app/Content/Images/house-theft.png"/></a>-->
+<!--</div>-->
 <!--<a id="sidenavbtn" class="openbtn" onclick="openNav()">&#9776; open</a>-->
 
 
 <!--<span id="openButton" onclick="openNav()">&#9776; open</span>-->
 
 <div class="container">
-    <div class="color-scale-holder fixed-bottom mx-auto border-top border-bottom rounded mb-2 col-xs-1 col-sm-6 col-md-5 col-lg-4 col-centered">
-        <div class="d-inline-block title">
+    <div class="color-scale-holder fixed-bottom mx-auto border-top border-bottom border-secondary rounded mb-2 col-xs-1 col-sm-6 col-md-5 col-lg-4 col-centered">
+        <div class="d-inline-block w-100">
             <h6 class="float-left">Dangerous</h6>
             <h6 class="float-right">Safer</h6>
         </div>
