--- a/public/index.html
+++ b/public/index.html
@@ -44,8 +44,8 @@
 
 <!--Navigation bar-->
 <div class="container-fluid">
-    <div class="bg-light dropdown col-sm-2 col-md-2 col-lg-1 border-bottom border-left border-right rounded p-1 m-0">
-        <div class="col-sm-12 col-md-12 col-lg-12">
+    <div class="dropdown col-xs-4 col-sm-2 col-md-2 col-lg-1 border-bottom border-left border-right rounded p-1 m-0">
+        <div class="col-xs-12 ">
             <h5 class="text-center">Crime HotSpot</h5>
         </div>
         <button class="btn btn-default dropdown-toggle col-sm-12 col-md-12 col-lg-12" type="button" id="menu1" data-toggle="dropdown">
@@ -53,8 +53,8 @@
             <span class="caret"></span>
         </button>
         <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
-            <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Map</a></li>
-            <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Analytics</a></li>
+            <li class="border-bottom" role="presentation"><a role="menuitem" tabindex="-1" href="#">Map</a></li>
+            <li class="border-bottom" role="presentation"><a role="menuitem" tabindex="-1" href="#">Analytics</a></li>
             <li role="presentation"><a role="menuitem" tabindex="-1" href="#">About Us</a></li>
         </ul>
     </div>
