--- a/public/analytics.html
+++ b/public/analytics.html
@@ -10,9 +10,6 @@
       <!-- Popper JS -->
       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"></script>
 
-      <!-- Chartist.JS -->
-      <script src="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.js"></script>
-
       <!-- Latest compiled JavaScript -->
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"></script>
 
@@ -22,13 +19,13 @@
       <link href="../app/StyleSheets/index.css" rel="stylesheet" type="text/css" >
       <link href="../app/StyleSheets/mainstyle.css" rel="stylesheet" type="text/css">
       <link href="../app/StyleSheets/sidenav.css" rel="stylesheet" type="text/css">
-      <link rel="stylesheet" href="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.css">
 
 
       <!-- Google Maps API -->
       <script async defer
               src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD6-F96eJ-bI82UmRtHtsfZFHxjodcCjR0&libraries=visualization">
       </script>
+
 
       <!-- Angular -->
       <script src="./../app/JavaScripts/ThirdParty/Angular/angular.min.js"></script>
@@ -37,22 +34,22 @@
       <script src="../app/app.js"></script>
       <script src="../app/Controllers/gservice.js"></script>
       <script src="../app/Controllers/mapLoad.js"></script>
-      <script src="../app/Controllers/PieChart.js"></script>
+      <script src="../app/Controllers/pieChart.js"></script>
+
+      <!-- Chart.js -->
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.3/Chart.min.js"></script>
+      <script src="../app/JavaScripts/ThirdParty/angular-chart.js/dist/angular-chart.min.js"></script>
 
       <!--Custom animations for CrimeHotSpot-->
       <script src=./../app/JavaScripts/indexAnimation.js type="text/javascript"></script>
 
 
   </head>
-  <body ng-controller="PieChart">
+  <body ng-controller="pieChartController">
   <div id="container" style="width: 80%; border:3px #ccc solid; margin: auto;">
-  <div id="piechart" class ="ct-chart ct-perfect-fourth" style="border:3px #ccc solid; width: 50%; margin: 0 auto;">
-    <button ng-click="showPie()">Show Pie Chart</button>
-    <script>
-
-      console.log('Test');
-
-    </script>
+     <canvas id="pieCrimeCat" class="chart chart-pie" chart-data="data" chart-labels="labels" chart-options="options"></canvas> 
+    
     
   </div>
-  </div>
+  </body>
+  </html>
