--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,11 @@
       <script src="../app/app.js"></script>
       <script src="../app/Controllers/gservice.js"></script>
       <script src="../app/Controllers/mapLoad.js"></script>
+      <script src="../app/Controllers/pieChart.js"></script>
+
+      <!-- Chart.js -->
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.3/Chart.min.js"></script>
+      <script src="../app/JavaScripts/ThirdParty/angular-chart.js/dist/angular-chart.min.js"></script>
 
       <!--Custom animations for CrimeHotSpot-->
       <script src=./../app/JavaScripts/indexAnimation.js type="text/javascript"></script>
