--- a/public/index.html
+++ b/public/index.html
@@ -36,9 +36,8 @@
 
     <!--Custom animations for CrimeHotSpot-->
     <script src=./../app/JavaScripts/indexAnimation.js type="text/javascript"></script>
-
-
 </head>
+
 <body ng-controller="mapLoad">
 <div id="map"></div>
 
@@ -72,14 +71,33 @@
 <!--src="../app/Content/Images/crimehotspot_logo.png"/>-->
 <!--</div>-->
 
-
-<div id="mySidenav" class="sidenav h-75" ng-click="">
-    <!--<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>-->
-    <a href="#">Armed Robbery <img src="../app/Content/Images/knife-icon.png"/></a>
-    <a href="#">Car Theft <img src="../app/Content/Images/car-theft.png"/></a>
-    <a href="#">House Breakins<img src="../app/Content/Images/house-theft.png"/></a>
+<!--Sidenav for crime profiles-->
+<div id="mySidenav" class="sidenav" ng-click="">
+    <h5 class="text-center">Crime Against</h5>
+    <hr>
+    <div class="text-center active">
+        <h5>Public</h5>
+        <a href="#"><img src="../app/Content/Images/public-crime.png"/></a>
+    </div>
+    <hr>
+    <div class="text-center">
+        <h5>Property</h5>
+        <a href="#"><img src="../app/Content/Images/car-theft.png"/></a>
+    </div>
+    <hr>
+    <div class="text-center">
+        <h5>Person</h5>
+        <a href="#"><img src="../app/Content/Images/person-crime.png"/></a>
+    </div>
+    <hr>
+    <div class="text-center">
+        <h5>Person: Severe</h5>
+        <a class="active" href="#"><img src="../app/Content/Images/knife-icon.png"/></a>
+    </div>
+    <hr>
 </div>
 
+<!--Color legend-->
 <div class="container">
     <div class="color-scale-holder fixed-bottom mx-auto border-top border-bottom border-secondary rounded mb-2 col-xs-1 col-sm-6 col-md-7 col-lg-4 col-centered">
         <div class="d-inline-block w-100">
