Added a second pie chart based off time of day of occurence

--- a/public/analytics.html
+++ b/public/analytics.html
@@ -47,8 +47,8 @@
   </head>
   <body ng-controller="pieChartController">
   <div id="container" style="width: 80%; border:3px #ccc solid; margin: auto;">
-     <canvas id="pieCrimeCat" class="chart chart-pie" chart-data="data" chart-labels="labels" chart-options="options"></canvas> 
-    
+     <canvas id="pieCrimeCat" class="chart chart-pie" chart-data="ccData" chart-labels="ccLabels" chart-options="ccOptions"></canvas> 
+     <canvas id="pieTimeOfDay" class="chart chart-pie" chart-data="tdData" chart-labels="tdLabels" chart-options="tdOptions"></canvas> 
     
   </div>
   </body>
