Documented CrimeFilter.js more using JSDocs. (in "app/Modules/CrimeFilter.js") And started implementing the test code for the CrimeFilter class (in "app/Tests/CrimeFilter.Test.js")
See "app/Tests/CrimeFilter.Test.js" for instructions on how to test the code.

--- a/app/Tests/CrimeFilter.Test.html
+++ b/app/Tests/CrimeFilter.Test.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Test CrimeFilter class</title>
-    <script src="../Modules/CrimeFilter.js" defer></script>
-    <script src="../CrimeFilter.Test.js" defer></script>
+    <script type="module" src="../Modules/CrimeFilter.js"></script>
+    <script type="module" src="CrimeFilter.Test.js"></script>
 </head>
 <body>
 
