Implemented safetyScore popup

--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,8 @@
 
       <!-- Google Maps API -->
       <script async defer
-              src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD6-F96eJ-bI82UmRtHtsfZFHxjodcCjR0&libraries=visualization">
+              type="text/javascript"
+              src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD6-F96eJ-bI82UmRtHtsfZFHxjodcCjR0&libraries=visualization,geometry">
       </script>
 
 
