Created DistanceFactor.Test.html and DistanceFactor.Test.js with stubs

--- a/app/Tests/DistanceFactor.Test.html
+++ b/app/Tests/DistanceFactor.Test.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Test DistanceFactor class</title>
-    <script src="DistanceFactor.Test.js" defer></script>
-    <script src="app/Modules/DistanceFactor.js" defer></script>
+    <script type="module" src="../Modules/DistanceFactor.js" ></script>
+    <script type="module" src="DistanceFactor.Test.js"></script>
 </head>
 <body>
 
