Don't mind me. Just picking dates. Hopefully.

--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,8 @@
       <link href="../app/StyleSheets/easterEgg.css" rel="stylesheet" type="text/css">
       <link href="../app/StyleSheets/3dbuttons.css" rel="stylesheet" type="text/css">
 
+      <link rel="stylesheet" href="../app/StyleSheets/angularjs-datetime-picker.css" />
+
 
       <!-- Google Maps API -->
       <script async defer
@@ -53,6 +55,8 @@
       <script src="../app/JavaScripts/ThirdParty/angular-chart.js/dist/angular-chart.min.js"></script>
 
       <script src="../app/Controllers/analytics.js"></script>
+
+      <script src="js/angularjs-datetime-picker.js"></script>
 
       <!--Custom animations for CrimeHotSpot-->
       <script src=./../app/JavaScripts/indexAnimation.js type="text/javascript"></script>
